# backdoor

./: .auto-claude-security.json  .auto-claude-status  .claude_settings.json  .gitignore  README.md
client/remote-desktop-client/: Cargo.toml
client/remote-desktop-client/src/: main.rs
client/remote-desktop-client/src/capture/: mod.rs
client/remote-desktop-client/src/clipboard/: mod.rs
client/remote-desktop-client/src/file_transfer/: mod.rs
client/remote-desktop-client/src/input/: mod.rs
client/remote-desktop-client/src/models/: mod.rs
client/remote-desktop-client/src/network/: mod.rs
server/: docker-compose.yml
server/RemoteDesktopServer/: Dockerfile  Program.cs  RemoteDesktopServer.csproj  RemoteDesktopServer.http
server/RemoteDesktopServer/Hubs/: RemoteDesktopHub.cs
server/RemoteDesktopServer/Models/: ClientInfo.cs  ClipboardData.cs  FileChunk.cs  FileTransferData.cs  FrameData.cs  InputData.cs
server/RemoteDesktopServer/Properties/: launchSettings.json
server/RemoteDesktopServer/Services/: ClientManager.cs  SessionCleanupService.cs
